[package]
authors = ["Casey Primozic <me@ameo.link>"]
description = "osu!track API platform, interfacing with the database and exposing its information through a public API"
name = "osutrack-backend"
version = "0.1.0"

[dependencies]
lazy_static = "1.0.0"
log = "0.4.0-rc.1"
r2d2 = "0.8.1"
r2d2-diesel = "1.0.0-beta1"
reqwest = "0.8.1"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
serde = "1.0.23"
serde_derive = "1.0.23"
serde_json = "1.0.7"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dependencies.diesel]
features = ["mysql", "large-tables", "chrono"]
version = "1.0.0-beta1"

[dependencies.diesel_infer_schema]
features = ["mysql"]
version = "1.0.0-beta1"
